# streamline-operator

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  NOTICE  README.md  docker-compose.test.yml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  release.yml
deploy/: kustomization.yaml  namespace.yaml  operator.yaml
deploy/argocd/: argocd-health-checks.yaml
deploy/crds/: kustomization.yaml  streamlinebackup-crd.yaml  streamlinebranch-crd.yaml  streamlinecluster-crd.yaml  streamlinecontract-crd.yaml  streamlinetopic-crd.yaml  streamlineuser-crd.yaml
deploy/rbac/: cluster-role-binding.yaml  cluster-role.yaml  service-account.yaml
docs/: API.md  ENVIRONMENT.md  TROUBLESHOOTING.md
scripts/: helm-integration-test.sh
src/: conditions.rs  error.rs  leader_election.rs  lib.rs  main.rs  metrics.rs
src/controllers/: autoscaling.rs  branch.rs  cluster.rs  contract.rs  memory.rs  mod.rs  operator_hub.rs  scale_to_zero.rs  topic.rs  user.rs
src/crd/: backup.rs  branch.rs  cluster.rs  contract.rs  edge.rs  memory.rs  mod.rs  topic.rs  user.rs
