[package]
name = "streamline-operator"
version = "0.2.0"
edition = "2021"
authors = ["Jose David Baena"]
description = "Kubernetes Operator for Streamline - Cloud-native deployment automation"
license = "Apache-2.0"
repository = "https://github.com/streamlinelabs/streamline-operator"
readme = "README.md"
keywords = ["kubernetes", "operator", "streamline", "kafka", "streaming"]
categories = ["network-programming", "asynchronous"]
rust-version = "1.80"

[dependencies]
# Kubernetes client and runtime
kube = { version = "0.95", features = ["runtime", "derive", "client", "ws"] }
k8s-openapi = { version = "0.26", features = ["v1_30"] }

# Async runtime
tokio = { version = "1.41", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI parsing
clap = { version = "4.5", features = ["derive", "env"] }

# Time utilities
chrono = { version = "0.4", features = ["serde"] }

# JSON patching for status updates
json-patch = "2.0"

# Schema generation
schemars = "0.8"

# Async traits
async-trait = "0.1"

# Random password generation
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"


[lints.clippy]
unwrap_used = "warn"
expect_used = "warn"

